[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakehouse"
version = "0.1.0"
description = "Databricks Lakehouse – Bronze/Silver/Gold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/lakehouse"]
